fixed size of buttons in basket window on small screens of devices

--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,9 @@ body{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.4);
+    overflow-y: auto;
     display: none;
+
 }
 .is-active {
     display: flex;
@@ -456,6 +458,13 @@ body{
     }
     .card-image{
         width: 100%;
+    }
+    .modal-footer .modal-price-tag {
+        font-size: 12px;
+        padding: 10px 5px;
+    }
+    .modal-footer .button {
+        font-size: 12px;
     }
 }
 @media (max-width: 480px) {
